--- a/sample/BlazorApp.Wpf/wwwroot/index.html
+++ b/sample/BlazorApp.Wpf/wwwroot/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>MyDesktopApp</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/site.css" rel="stylesheet" />
+    <link href="_content/BlazorApp/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="_content/BlazorApp/css/site.css" rel="stylesheet" />
 </head>
 <body>
     <app>Loading...</app>
